@@ -18,6 +18,7 @@
 - fix xfn sets incorrect lexer state.
 - fix old style key lookup.
 - fix expire when server not responding.
+- fix ldap_uri config update.
 
 28/03/2014 autofs-5.0.9
 =======================
